# pyOpenJFront

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .travis.yml  LICENSE.md  README.md  pyproject.toml  setup.py  tox.ini
.devcontainer/: devcontainer.json
.github/workflows/: ci.yaml
docs/: __init__.py  conf.py  index.rst  original_LICENSE.md  pyopenjtalk.rst
docs/notebooks/: Demo.ipynb
pyopenjtalk/: __init__.py  openjtalk.pyi  openjtalk.pyx  structures.py  utils.py
tests/: test_openjtalk.py
